--- a/HTML/currency_convertor.html
+++ b/HTML/currency_convertor.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Converter</title>
+    <script src="../js/currny_convertor.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -56,26 +57,5 @@
         <br>
         <button>Convert</button>
     </div>
- 
-    <script>
-        let rate = 1;
-        let btn = document.querySelector('button');
-        btn.addEventListener('click', function() {
-            let fromCurr = document.querySelector('#from').value;
-            let toCurr = document.querySelector('#to').value;
-            let url = `https://api.exchangerate-api.com/v4/latest/${fromCurr}`;
-            fetch(url)
-            .then((response) => {
-                return response.json();
-            })
-            .then(data => {
-                rate = data.rates[toCurr.toUpperCase()];
-                let amt = parseFloat(document.querySelector('#amt').value);
-                let convertedAmt = amt * rate;
-                let conamt = document.querySelector('#conamt');
-                conamt.value = convertedAmt.toFixed(2);
-            })
-        });
-    </script>
 </body>
 </html>
